--- a/src/main.css
+++ b/src/main.css
@@ -111,14 +111,31 @@ h3 {
   font-size: 22px;
 }
 
-p {
+p, a {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
 }
 
+nav ul {
+  list-style: none;
+  margin: 0;
+}
 
+nav ul li {
+  display: inline-block;
+  padding: 10px 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+nav .active {
+  text-decoration: underline;
+}
 
 
 /* Style for event elements, cards are sqare elements, bars are the longer elements*/
