--- a/src/main.css
+++ b/src/main.css
@@ -331,3 +331,34 @@ button.event-bar-expand {
 .scroll-full-width{
   overflow-x: auto;
 }
+
+.profile-page{
+  align-content: center;
+  text-align: center;
+}
+.profile-pic {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+.profile-buttons {
+
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+.vl{
+  border-left: 6px solid gray;
+  border-radius: 5px;
+  height: 100px;
+}
+.profile-background{
+  padding-top: 20px;
+  background-color: white;
+  padding-bottom: 20px;
+}
