--- a/src/main.css
+++ b/src/main.css
@@ -91,6 +91,7 @@ body {
 }
 
 nav {
+  z-index: 40;
   background-color: #193144;
 }
 
@@ -170,6 +171,7 @@ section {
 
 /* Style for a base event card */
 .event-card {
+  cursor: pointer;
   width: 300px;
   margin: 10px;
 }
@@ -236,6 +238,14 @@ button {
   padding: 5px 10px;
 }
 
+button.button-no-style {
+  border: none;
+  border-radius: 0;
+  padding: 0;
+  background: none;
+  background-color: none;
+}
+
 /* Styling for user icons */
 /* Position the bottom right of a card */
 .event-user-status {
@@ -285,7 +295,15 @@ button {
   padding: 0;
 }
 
-.category-card-toggle  {
+.category-card input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.category-card input:checked ~ .backdrop{
   border: 5px solid green;
   border-radius: 10px;
 }
@@ -378,6 +396,13 @@ button {
   margin: 100px calc(50% - 350px);
   border-radius: 10px;
   border: 3px solid #a8b4bd;
+  position: relative;
+}
+
+.popup .close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 
 /* Styles for scrolling (needs some work) */
@@ -423,10 +448,11 @@ button {
   height: 100px;
 }
 .profile-background{
+  border-radius: 10px;
   padding-top: 20px;
   background-color: white;
   padding-bottom: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
 }
 .create-page{
   display: flex;
@@ -497,4 +523,52 @@ button {
 #createVG:checked ~ label[for="createVG"]{
   border-color: green;
   background-color: #abffba;
+}
+
+.sign-page{
+  background-color: rgb(58, 38, 99);
+  background-repeat:repeat-x;
+  background-position:bottom;
+  background-image: url('https://us.123rf.com/450wm/pskov/pskov1809/pskov180900015/109673905-.jpg?ver=6');
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.signup-content button {
+  margin: 20px auto;
+  display: block;
+  width: 300px;
+}
+
+.signup-content button h3 {
+  margin: 0;
+}
+
+.signup-content input {
+  width: 100%;
+  height: 48px;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border:none;
+}
+
+.signup-content h1, .signup-content a {
+  text-decoration: none;
+  text-align: center;
+  color:black;
+}
+
+.signup-content {
+  border-radius: 10px;
+  margin: 200px auto;
+  padding: 50px 70px 40px;
+  width: 600px;
+  background-color: rgba(214, 214, 214, 0.4);
+}
+
+.signup-content p {
+  margin-top: 10px;
 }
