--- a/src/main.css
+++ b/src/main.css
@@ -379,6 +379,19 @@ button.button-no-style {
   margin: 14px 3px 7px;
 }
 
+button.join {
+  background-color: rgb(44, 189, 80);
+  padding: 10px 15px;
+  transition: background-color 0.2s linear;
+}
+button.join:hover {
+  background-color: rgb(38, 164, 69);
+}
+button.join p {
+  font-weight: 700;
+  color:white;
+}
+
 .expanded-bottom-buttons {
   float: right;
 }
@@ -388,6 +401,20 @@ button.button-no-style {
   grid-template-columns: 24px 1fr 24px 1fr;
   grid-column-gap: 7px;
   margin: 15px 0;
+}
+
+.loader {
+  border: 7px solid rgb(186, 186, 186); /* Light grey */
+  border-top: 7px solid #193144;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2.5s ease-in-out infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 .event-expanded .line {
