--- a/src/main.css
+++ b/src/main.css
@@ -491,13 +491,22 @@ button.join p {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  padding-bottom: 30px;
-  padding-top: 30px;
+
+}
+.profile-buttons button{
+  padding: 30px;
+}
+.profile-buttons button:hover{
+  border-radius: 3px;
+  box-shadow: 0 0 6px rgba(0,139,139, 1);
+  transition: all 200ms ease-out
 }
 .vl{
   border-left: 6px solid gray;
   border-radius: 5px;
-  height: 100px;
+  height: 130px;
+  margin-top: 30px;
+  padding-bottom: 30px;
 }
 .profile-background{
   border-radius: 10px;
@@ -633,7 +642,7 @@ button.join p {
   margin: 0;
 }
 
-.signup-content input, .signup-content select {
+.signup-content input[type=text], input[type=email], input[type=password], .signup-content select {
   width: 100%;
   height: 48px;
   padding: 10px 15px;
@@ -643,6 +652,10 @@ button.join p {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+.signup-content input[type=checkbox]{
+
 }
 
 .signup-content h1, .signup-content a {
